--- a/manifests/helm/qwen3-ops/templates/deployment.yaml
+++ b/manifests/helm/qwen3-ops/templates/deployment.yaml
@@ -32,7 +32,7 @@ spec:
           - "sleep infinity"
           # - vllm serve /mnt/model --served-model-name qwen3-0.6b --port 8000 --trust-remote-code --max-model-len 2048 --gpu-memory-utilization 0.95
           image: "{{ .Values.image.deploy.repository }}:{{ .Values.image.deploy.tag | default .Chart.AppVersion }}"
-          imagePullPolicy: {{ .Values.image.pullPolicy }}
+          imagePullPolicy: {{ .Values.image.deploy.pullPolicy }}
           name: vllm
           ports:
           - containerPort: 8000
