--- a/manifests/helm/qwen3-ops/tmp.yaml
+++ b/manifests/helm/qwen3-ops/tmp.yaml
@@ -5,7 +5,7 @@ kind: Deployment
 metadata:
   labels:
     helm.sh/chart: model-ops-0.1.0
-    app.kubernetes.io/name: qwen3-model-ops
+    app.kubernetes.io/name: model-ops
     app.kubernetes.io/instance: qwen3
     app.kubernetes.io/version: "1.16.0"
     app.kubernetes.io/managed-by: Helm
@@ -14,12 +14,12 @@ spec:
   replicas: 2
   selector:
     matchLabels:
-      app.kubernetes.io/name: qwen3-model-ops
+      app.kubernetes.io/name: model-ops
       app.kubernetes.io/instance: qwen3
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: qwen3-model-ops
+        app.kubernetes.io/name: model-ops
         app.kubernetes.io/instance: qwen3
     spec:
       # imagePullSecrets:
@@ -57,6 +57,12 @@ apiVersion: policy.one.alibabacloud.com/v1alpha1
 kind: ClusterOverridePolicy
 metadata:
   name: qwen3-qwen3-0-6b
+  labels:
+    helm.sh/chart: model-ops-0.1.0
+    app.kubernetes.io/name: model-ops
+    app.kubernetes.io/instance: qwen3
+    app.kubernetes.io/version: "1.16.0"
+    app.kubernetes.io/managed-by: Helm
 spec:
   resourceSelectors:
   - apiVersion: data.fluid.io/v1alpha1
@@ -85,6 +91,12 @@ apiVersion: policy.one.alibabacloud.com/v1alpha1
 kind: ClusterPropagationPolicy
 metadata:
   name: dataset-cpp
+  labels:
+    helm.sh/chart: model-ops-0.1.0
+    app.kubernetes.io/name: model-ops
+    app.kubernetes.io/instance: qwen3
+    app.kubernetes.io/version: "1.16.0"
+    app.kubernetes.io/managed-by: Helm
 spec:
   overridePolicies:
     - name: qwen3-qwen3-0-6b
@@ -101,6 +113,12 @@ apiVersion: data.fluid.io/v1alpha1
 kind: Dataset
 metadata:
   name: qwen3-qwen3-0-6b
+  labels:
+    helm.sh/chart: model-ops-0.1.0
+    app.kubernetes.io/name: model-ops
+    app.kubernetes.io/instance: qwen3
+    app.kubernetes.io/version: "1.16.0"
+    app.kubernetes.io/managed-by: Helm
 spec:
   mounts:
     # 模型文件在，镜像中的存储位置
@@ -112,6 +130,12 @@ apiVersion: policy.one.alibabacloud.com/v1alpha1
 kind: PropagationPolicy
 metadata:
   name: demo-policy
+  labels:
+    helm.sh/chart: model-ops-0.1.0
+    app.kubernetes.io/name: model-ops
+    app.kubernetes.io/instance: qwen3
+    app.kubernetes.io/version: "1.16.0"
+    app.kubernetes.io/managed-by: Helm
 spec:
 #  autoScaling:
 #    ecsProvision: true
@@ -146,6 +170,12 @@ apiVersion: data.fluid.io/v1alpha1
 kind: ThinRuntime
 metadata:
   name: qwen3-qwen3-0-6b
+  labels:
+    helm.sh/chart: model-ops-0.1.0
+    app.kubernetes.io/name: model-ops
+    app.kubernetes.io/instance: qwen3
+    app.kubernetes.io/version: "1.16.0"
+    app.kubernetes.io/managed-by: Helm
 spec:
   profileName: qwen3-qwen3-0-6b
 ---
@@ -154,6 +184,12 @@ apiVersion: data.fluid.io/v1alpha1
 kind: ThinRuntimeProfile
 metadata:
   name: qwen3-qwen3-0-6b
+  labels:
+    helm.sh/chart: model-ops-0.1.0
+    app.kubernetes.io/name: model-ops
+    app.kubernetes.io/instance: qwen3
+    app.kubernetes.io/version: "1.16.0"
+    app.kubernetes.io/managed-by: Helm
 spec:
   imagePullSecrets:
   - name: imagesecret
