--- a/manifests/helm/qwen3-argo-appset/values.yaml
+++ b/manifests/helm/qwen3-argo-appset/values.yaml
@@ -11,16 +11,16 @@ image:
     repository: kube-ai-registry.cn-shanghai.cr.aliyuncs.com/kube-ai/vllm-openai
     pullPolicy: IfNotPresent
     tag: "v0.9.1"
-  model:
-    repository: baicun-business-registry.ap-northeast-1.cr.aliyuncs.com/baicun-dev/model-volume
-    pullPolicy: IfNotPresent
-    # Overrides the image tag whose default is the chart appVersion.
-    tag: "qwen3-0.6b"
+  # model:
+  #   repository: baicun-business-registry.ap-northeast-1.cr.aliyuncs.com/baicun-dev/model-volume
+  #   pullPolicy: IfNotPresent
+  #   # Overrides the image tag whose default is the chart appVersion.
+  #   tag: "qwen3-0.6b"
 modelimage:
   repository: baicun-business-registry.ap-northeast-1.cr.aliyuncs.com/baicun-dev/model-volume
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.      modelimage.tag
-  tag: "qwen3-0.6b"
+  tag: "qwen3-0.6b-v23"
 
 imagePullSecrets: 
   deploy: ""
