--- a/manifests/helm/qwen3-argo-appset/templates/dataset.yaml
+++ b/manifests/helm/qwen3-argo-appset/templates/dataset.yaml
@@ -34,7 +34,7 @@ spec:
   fuse:
     image: {{ .Values.modelimage.repository }}
     imageTag: {{ .Values.modelimage.tag }}
-    imagePullPolicy: {{ .Values.image.model.pullPolicy }}
+    imagePullPolicy: {{ .Values.modelimage.pullPolicy }}
     command:
     - bash
     - "/entrypoint.sh"
